--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -18,10 +18,15 @@
 
 <body>
     <header>External recipients detected!</header>
-  <p>H</p>
+
   <main>
-    <p>Hello world!2</p> 
-    <p id ='ID'>removed element</p> 
+  <ul>
+    <li>email 1</li>
+    <li>email 2</li>
+    <li>email 3</li>
+    <li>email 4</li>
+    </ul>
+
   </main>
 
 </body>
