--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -20,12 +20,13 @@
     <header>External recipients detected!</header>
 
   <main>
-  <ul>
-    <li>email 1</li>
-    <li>email 2</li>
-    <li>email 3</li>
-    <li>email 4</li>
-    </ul>
+      <form action="/action_page.php">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="John"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="submit" value="Submit">
+      </form>
 
   </main>
 
