--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -20,11 +20,13 @@
     <header>External recipients detected!</header>
 
   <main>
-      <form action="/action_page.php">
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+      <form>
+            <input type="checkbox" id="email1" name="emai11" value="email 1">
+            <label for="email1"> I have a bike</label><br>
+            <input type="checkbox" id="email2" name="email2" value="email 2">
+            <label for="email2"> I have a car</label><br>
+            <input type="checkbox" id="email3" name="email3" value="email 3">
+            <label for="email3"> I have a boat</label>
         <input type="submit" value="Submit">
       </form>
 
