--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -21,12 +21,12 @@
 
   <main>
       <form>
-            <input type="checkbox" id="email1" name="emai11" value="email 1">
-            <label for="email1"> I have a bike</label><br>
-            <input type="checkbox" id="email2" name="email2" value="email 2">
-            <label for="email2"> I have a car</label><br>
-            <input type="checkbox" id="email3" name="email3" value="email 3">
-            <label for="email3"> I have a boat</label>
+            <input type="checkbox" id="email1" name="emai11" value="email1">
+            <label for="email1">Email 1</label><br>
+            <input type="checkbox" id="email2" name="email2" value="email2">
+            <label for="email2">Email 2</label><br>
+            <input type="checkbox" id="email3" name="email3" value="email3">
+            <label for="email3">Email 3</label>
         <input type="submit" value="Submit">
       </form>
 
