--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -27,7 +27,7 @@
             <label for="email2">Email 2</label><br>
             <input type="checkbox" id="email3" name="email3" value="email3">
             <label for="email3">Email 3</label>
-        <input type="submit" value="Submit">
+        <button type="submit">Submit</button>
       </form>
 
   </main>
