--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -20,7 +20,7 @@
     <header>External recipients detected!</header>
 
   <main>
-      <form>
+      <form id="emailList">
             <input type="checkbox" id="email1" name="emai11" value="email1">
             <label for="email1">Email 1</label><br>
             <input type="checkbox" id="email2" name="email2" value="email2">
