--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -21,13 +21,14 @@
 
   <main>
       <form id="emailList">
+        <p id='dummyElement'></p>
             <input type="checkbox" id="email1" name="emai11" value="email1">
             <label for="email1">Email 1</label><br>
             <input type="checkbox" id="email2" name="email2" value="email2">
             <label for="email2">Email 2</label><br>
             <input type="checkbox" id="email3" name="email3" value="email3">
             <label for="email3">Email 3</label>
-        <button type="submit">Submit</button>
+        <button type="submit">Update recipients.</button>
       </form>
 
   </main>
