--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -21,7 +21,7 @@
 
   <main>
       <form id="emailList">
-        <p id='dummyElement'></p>
+        <div id="container"></div>
 
         <button type="submit">Update recipients.</button>
       </form>
