--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -7,6 +7,7 @@
   <title>External emails detected.</title>
   
   <!-- Office JavaScript API -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
   <!--script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script--->
   <script type="text/javascript" src="dialogbox.js"></script>
