--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -24,7 +24,7 @@
       <form id="emailList">
         <div id="container"></div>
 
-        <button type="submit">Update recipients.</button>
+        <button type="submit">Send with selected recipients.</button>
       </form>
 
   </main>
