--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -22,7 +22,8 @@
 
   <main>
       <form id="emailList">
-        <div id="container"></div>
+        <div id="container">To Recipients</div>
+        <div id="container">Cc Recipients</div>
 
         <button type="submit">Send with selected recipients.</button>
       </form>
