--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -22,8 +22,11 @@
 
   <main>
       <form id="emailList">
-        <div id="container">To Recipients</div>
-        <div id="container">Cc Recipients</div>
+        <p>To Recipients</p>
+        <div id="TOcontainer"></div>
+        <p>Cc Recipients</p>
+        <div id="CCcontainer"></div>
+        
 
         <button type="submit">Send with selected recipients.</button>
       </form>
