--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -22,10 +22,10 @@
 
   <main>
       <form id="emailList">
-        <p>To Recipients</p>
-        <div id="TOcontainer"></div>
-        <p>Cc Recipients</p>
-        <div id="CCcontainer"></div>
+        <p id = "toListTitle">To Recipients</p>
+        <div id="toContainer"></div>
+        <p id = "ccListTitle">Cc Recipients</p>
+        <div id="ccContainer"></div>
         
 
         <button type="submit">Send with selected recipients.</button>
