--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -32,7 +32,7 @@
         <div id="ccContainer"></div>
       </form>
     
-      <button type="submit">Send with selected recipients.</button>
+      <input type="button" value="Send with recipients" onclick="get_form_values()" />
 
   </main>
 
