--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -32,7 +32,7 @@
         <div id="ccContainer"></div>
       </form>
     
-      <input type="button" value="Send with recipients" onclick="get_form_values()" />
+      <input type="button" value="Send to selected recipients" onclick="get_form_values()" />
 
   </main>
 
