--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -33,6 +33,7 @@
       </form>
     
       <input type="button" value="Send to selected recipients" onclick="get_form_values()" />
+      <input type="button" value="Cancel" onclick="cancel()" />
     <p id='warning' style='display:none'>Are you sure?</p>
   </main>
 
