--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <title>External emails detected.</title>
-  
+  <link  rel ='stylesheet' href='normalize.css'>
+  <link  rel ='stylesheet' href='dialogbox.css'>
   <!-- Office JavaScript API -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-    <header>External recipients detected!</header>
+    <header>Please confirm the recipients of your email or invite:</header>
 
   <main>
       <form id="toEmailList">
