--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-    <header>Please confirm the recipients of your email or invite:</header>
+    <header>
+      <h1>Please confirm the recipients of your email or invite:</h1>
+  </header>
 
   <main>
       <form id="toEmailList">
