--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <div id='wrapper'>
     <header>
       <h1>Please confirm the recipients of your email or invite:</h1>
   </header>
@@ -39,7 +40,7 @@
       <input type="button" value="Cancel" onclick="cancel()" />
     <p id='warning' style='display:none'>Are you sure?</p>
   </main>
-
+</div>
 </body>
 
 </html>
