--- a/src/commands/commands.html
+++ b/src/commands/commands.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <!-- Office JavaScript API -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
     <!--script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script--->
     <script type="text/javascript" src="commands.js"></script>
