--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -38,7 +38,7 @@
           <div id="ccContainer"></div>
         </form>
 
-        <input type="button" id = 'send_button' class='submit_button' value="Send to selected recipients" onclick="get_form_values()" />
+        <input type="button" id = 'send_button' class='submit_button' value="Send to selected recipients" onclick="getFormValues()" />
         <input type="button" id = 'cancel_button' class='submit_button' value="Cancel" onclick="cancel()" />
       <p id='warning' style='display:none'>Are you sure?</p>
     </main>
