Changed warning message.

--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -40,7 +40,7 @@
 
         <input type="button" id = 'send_button' class='submit_button' value="Send to selected recipients" onclick="getFormValues()" />
         <input type="button" id = 'cancel_button' class='submit_button' value="Cancel" onclick="cancel()" />
-      <p id='warning' style='display:none'>Are you sure?</p>
+      <p id='warning' style='display:none'>Cannot send email. Incorrect email address selected.</p>
     </main>
   </div>
 </body>
