--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -37,6 +37,11 @@
           <p id = "ccListTitle">Cc Recipients</p>
           <div id="ccContainer"></div>
         </form>
+      
+        <form id="bccEmailList">
+          <p id = "bccListTitle">Bcc Recipients</p>
+          <div id="bccContainer"></div>
+        </form>
 
         <input type="button" id = 'send_button' class='submit_button' value="Send to recipients" onclick="getFormValues()" />
         <input type="button" id = 'cancel_button' class='submit_button' value="Cancel" onclick="cancel()" />
