--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -23,7 +23,7 @@
 <body>
   
     <header>
-      <h1>Please confirm the recipients of your email or invite:</h1>
+      <h1 id = "mainLabel">Please confirm the recipients of your email or invite:</h1>
   </header>
   <div id='wrapper'>
     <main>
