--- a/src/dialogbox/dialogbox.html
+++ b/src/dialogbox/dialogbox.html
@@ -42,7 +42,7 @@
 
         <input type="button" id = 'send_button' class='submit_button' value="Send to recipients" onclick="getFormValues()" />
         <input type="button" id = 'cancel_button' class='submit_button' value="Cancel" onclick="cancel()" />
-      <p id='warning' style='display:none'>Cannot send email. Incorrect email address selected.</p>
+      <p id='warning' style='display:none'>Cannot send email. The selected email addresses are incorrect.</p>
     </main>
   </div>
 </body>
